<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>org.broadleafcommerce</groupId>
        <artifactId>broadleaf-boot-starter-parent</artifactId>
        <version>6.2.10-GA</version>
        <relativePath/>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mycompany-community</groupId>
    <artifactId>boot-community-demo</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Broadleaf Spring Boot Community Demo</name>

    <repositories>
        <repository>
            <id>public snapshots</id>
            <name>public snapshots</name>
            <url>https://nexus2.broadleafcommerce.org/nexus/content/groups/community-snapshots/</url>
        </repository>
        <repository>
            <id>public releases</id>
            <name>public releases</name>
            <url>https://nexus2.broadleafcommerce.org/nexus/content/groups/community-releases/</url>
        </repository>
    </repositories>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.uri>${project.baseUri}</project.uri>
        <java.version>1.8</java.version> <!-- Specify the Java version -->
        <boot.jvm.memory>-Xmx1536M</boot.jvm.memory>
        <debug.args>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=${debug.port}</debug.args>
        <boot.jvm.args>${boot.jvm.memory} ${debug.args}</boot.jvm.args>
        <groovy.version>2.4.21</groovy.version>
        <gpg.plugin.version>1.6</gpg.plugin.version>
        <broadleaf-presentation.version>1.3.7-GA</broadleaf-presentation.version>
        <hsqldb.database.starter.version>2.3.5-GA</hsqldb.database.starter.version>
        <closure.compiler.version>v20200830</closure.compiler.version>
        <hibernate.version>5.4.33.Final</hibernate.version>
        <hibernate-validator.version>6.1.7.Final</hibernate-validator.version>
        <javax.version>2.3.1</javax.version>
        <sunxml.version>3.0.2</sunxml.version>
        <javax-annotation.version>1.3.2</javax-annotation.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                    <configuration>
                        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <jvmArguments>${boot.jvm.args}</jvmArguments>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.zeroturnaround</groupId>
                <artifactId>jrebel-maven-plugin</artifactId>
                <version>1.1.10</version>
                <executions>
                    <execution>
                        <id>generate-rebel-xml</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>jrebel</id>
            <properties>
                <boot.jvm.args>${boot.jvm.memory} ${debug.args} ${jrebel.agent.args}</boot.jvm.args>
            </properties>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.mycompany-community</groupId>
                <artifactId>boot-community-demo-core</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>core</module>
<!--        <module>avisoft</module>-->
        <module>api</module>
    </modules>
</project>
